syntax = "proto3";

option csharp_namespace = "Habbes.Organ";

service PeerService {
    rpc Put(PutRequest) returns (PutResponse);
    rpc Get(GetRequest) returns (GetResponse);
}

service DirectoryService {
    rpc RegisterPeer(RegisterPeerRequest) returns (RegisterPeerResponse);
    rpc RegisterChannel(RegisterChannelRequest) returns (RegisterChannelResponse);
    rpc GetChannel(GetChannelRequest) returns (GetChannelResponse);
}

message PutRequest {
    string channel = 1;
    int64 timestamp = 2;
    bytes message = 3;
}

message PutResponse {
    ResponseStatus responseStatus = 1;
}

message GetRequest {
    string channel = 1;
    int64 from = 2;
    int64 to = 3;
}

message GetResponse {
    ResponseStatus responseStatus = 1;
    repeated ChannelMessage messages = 2;
}

message ChannelMessage {
    int64 timestamp = 1;
    bytes message = 2;
}

message RegisterPeerRequest {
    ServerLocation serverLocation = 1;
}

message RegisterPeerResponse {
    ResponseStatus responseStatus = 1;
    string peerId = 2;
}

message RegisterChannelRequest {
    string peerdId = 1;
    string channelId = 2;
}

message RegisterChannelResponse {
    ResponseStatus responseStatus = 1;
}

message GetChannelRequest {
    string channelId = 1;
}

message GetChannelResponse {
    ResponseStatus responseStatus = 1;
    ServerLocation serverLocation = 2;
}

message ServerLocation {
    string uri = 1;
    int32 port = 2;
}

message ResponseStatus {
    bool ok = 1;
    string errorMessage = 2;
}